welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:22: error: not found: value stop
       	stop()
        ^