welcome.lessons.welcome.summative.Moria.scala.code
gauche()
gauche()

while(estFaceMur()!=true && getCouleurSol()!=Color.GREEN){
  if (porteBiscuit()){
    while(!estSurBiscuit){
      avance()
    }
    recule()
    poseBiscuit()
    gauche()
    gauche()
    avance()
  }else{
    while(!estSurBiscuit() && getCouleurSol()!=Color.GREEN){
     if (estFaceMur()){
        droite()
				avance()
				gauche()
				avance() 
       	stop()
      }else{
        avance()
      }
    }
    prendBiscuit()
    gauche()
    gauche()
  }
}
